--- a/frontend/vue-project/package.json
+++ b/frontend/vue-project/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "pinia": "^2.1.7",
     "sanitize-html": "^2.13.0",
     "vue": "^3.4.29",
