allowed python print to make it to the terminal; fixed date published parsing

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     volumes:
       - .:/app
       - /app/.venv/
+    environment:
+      - PYTHONUNBUFFERED=1
   frontend:
     build:
       dockerfile: ./Dockerfile-frontend
