--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ joblib==1.4.2
 MarkupSafe==2.1.5
 mpmath==1.3.0
 networkx==3.3
+nltk==3.9.1
 numpy==2.1.1
 nvidia-cublas-cu12==12.1.3.1
 nvidia-cuda-cupti-cu12==12.1.105
