--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,4 +16,4 @@ services:
       - "5173:5173"
     volumes:
       - ./frontend/vue-project:/app/frontend/vue-project
-      - /app/node_modules/
+      - /app/frontend/vue-project/node_modules/
